--- a/styles/general.css
+++ b/styles/general.css
@@ -60,3 +60,17 @@ body {
 .home-tex-job {
     font-size: 1.5em;
 }
+
+.experience-text-container {
+    background-color: gray;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.experience-text {
+    font-size: 2em;
+    font-weight: 700;
+    color: white;
+}
