--- a/styles/general.css
+++ b/styles/general.css
@@ -30,6 +30,14 @@ body {
     color: white;
 }
 
+.header-right-section div {
+    transition: opacity 0.2s ease-in-out;
+}
+
+.header-right-section div:hover {
+    opacity: 0.7;
+}
+
 .header div:last-child {
     margin-right: 20px;
 }
@@ -61,6 +69,11 @@ body {
     font-size: 1.5em;
 }
 
+/*
+.experience-section {
+    background-color: #f5f5f5;
+}*/
+
 .experience-text-container {
     background-color: gray;
     height: 120px;
@@ -73,4 +86,54 @@ body {
     font-size: 2em;
     font-weight: 700;
     color: white;
+}
+
+.experience-item-container {
+    display: flex;
+    background-color: #f5f5f5;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.experience-item-img {
+    max-width: 700px;
+    margin-right: 20px;
+    border: solid;
+    border-color: #c0c0c0;
+    border-width: 1px;
+    box-shadow: 3px 3px 5px lightslategrey;
+    transition: opacity 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+}
+
+.experience-item-img:hover {
+    opacity: 0.8;
+    box-shadow: 3px 3px 8px 2px lightslategrey;
+    cursor: pointer;
+}
+
+.experience-item div {
+    padding-right: 20px;
+}
+
+.experience-details {
+    flex: 1;
+}
+
+.experience-details-a {
+    text-decoration: none;
+    font-size: 30px;
+    font-weight: 500;
+    color: black;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.experience-details-a:hover {
+    opacity: 0.7;
+    cursor: pointer;
+}
+
+.experience-details-description {
+    font-size: 17px;
 }
