--- a/styles/general.css
+++ b/styles/general.css
@@ -69,12 +69,37 @@ body {
     font-size: 1.5em;
 }
 
-/*
-.experience-section {
+.about-description {
     background-color: #f5f5f5;
-}*/
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
 
-.experience-text-container {
+.about-section {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.about-section p {
+    line-height: 1.6;
+    color: #666;
+}
+
+.aboutsection ul {
+    list-style-type: square;
+    padding-left: 20px;
+}
+
+.about-section h3 h2{
+    color: #333;
+}
+
+.experience-text-container, .about-text-container, .projects-text-container {
     background-color: gray;
     height: 120px;
     display: flex;
@@ -82,13 +107,13 @@ body {
     justify-content: center;
 }
 
-.experience-text {
+.section-headline {
     font-size: 2em;
     font-weight: 700;
     color: white;
 }
 
-.experience-item-container {
+.experience-item-container, .projects-item-container {
     display: flex;
     background-color: #f5f5f5;
     padding-left: 20px;
@@ -97,7 +122,7 @@ body {
     padding-bottom: 30px;
 }
 
-.experience-item-img {
+.experience-item-img, .projects-item-img {
     max-width: 700px;
     margin-right: 20px;
     border: solid;
@@ -107,21 +132,21 @@ body {
     transition: opacity 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
-.experience-item-img:hover {
+.experience-item-img:hover, .projects-item-img:hover {
     opacity: 0.8;
     box-shadow: 3px 3px 8px 2px lightslategrey;
     cursor: pointer;
 }
 
-.experience-item div {
+.experience-item div, .projects-item div {
     padding-right: 20px;
 }
 
-.experience-details {
+.experience-details, .projects-details {
     flex: 1;
 }
 
-.experience-details-a {
+.experience-details-a, .projects-details-a {
     text-decoration: none;
     font-size: 30px;
     font-weight: 500;
@@ -129,11 +154,26 @@ body {
     transition: opacity 0.2s ease-in-out;
 }
 
-.experience-details-a:hover {
+.experience-details-a:hover, .projects-details-a:hover {
     opacity: 0.7;
     cursor: pointer;
 }
 
-.experience-details-description {
+.experience-details-description, .projects-details-description {
     font-size: 17px;
+}
+
+
+.contact-section {
+    padding-bottom: 100px;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
