--- a/styles/general.css
+++ b/styles/general.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -68,6 +72,17 @@ body {
 .home-text-name {
     font-size: 2.5em;
     font-weight: 700;
+    transition: opacity 0.2s ease-in-out;
+    cursor: pointer;
+}
+
+.home-text-name a {
+    text-decoration: none;
+    color: white;
+}
+
+.home-text-name:hover {
+    opacity: 0.7;
 }
 
 .home-tex-job {
@@ -104,7 +119,7 @@ body {
     color: #333;
 }
 
-.experience-text-container, .about-text-container, .projects-text-container, .education-text-container {
+.section-text-container {
     background-color: gray;
     height: 120px;
     display: flex;
@@ -116,6 +131,18 @@ body {
     font-size: 2em;
     font-weight: 700;
     color: white;
+    transition: opacity 0.2s ease-in-out;
+    cursor: pointer;
+}
+
+.section-headline a {
+    text-decoration: none;
+    color: white;
+
+}
+
+.section-headline:hover {
+    opacity: 0.7;
 }
 
 .experience-item-container, .projects-item-container {
@@ -199,31 +226,85 @@ body {
 
 
 
-
-
-
-
-
-
-
-
 .contact-section {
     padding-bottom: 100px;
 }
 
+.contact-left {
+    flex-basis: 35%;
+}
 
+.contact-right {
+    flex-basis: 60%;
+}
 
+.contact-left p {
+    margin-top: 30px;
+}
 
+.contact-left p i {
+    color: #ff004f;
+    margin-right: 15px;
+    font-size: 25px;
+}
 
+.social-icons {
+    margin-top: 30px;
+}
 
+.social-icons a {
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: #ababab;
+    display: inline-block;
+    transition: transform 0.5s;
+}
 
+.social-icons a:hover {
+    color: #ff004f;
+    transform: translateY(-5px);
+}
+
+.btn.btn2 {
+    display: inline-block;
+    background: #ff004f;
+}
+
+.contact-right form {
+    width: 100%;
+}
+
+form input, form textarea {
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #262626;
+    padding: 15px;
+    margin: 15px 0;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 6px;
+}
+
+form .btn2 {
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+#msg {
+    color: #61b752;
+    margin-top: 5px;
+    display: block;
+}
 
 footer {
     background-color: #333;
     color: #fff;
     text-align: center;
     padding: 10px 0;
-    position: fixed;
     bottom: 0;
     width: 100%;
 }
