--- a/styles/general.css
+++ b/styles/general.css
@@ -9,116 +9,6 @@ body {
     height: 3000px;
 }
 
-.header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    height: 60px;
-    z-index: 100;
-    background-color: rgba(255, 255, 255, 0);
-    transition: background-color 0.3s ease-in-out;
-}
-
-.header-solid {
-    background-color: rgba(189, 189, 189, 0.815);
-}
-
-.header-right-section {
-    display: flex;
-    align-items: center;
-}
-
-.header div a {
-    margin-left: 23px;
-    font-size: 17px;
-    text-decoration: none;
-    color: white;
-}
-
-.header-right-section div {
-    transition: opacity 0.2s ease-in-out;
-}
-
-.header-right-section div:hover {
-    opacity: 0.7;
-}
-
-.header div:last-child {
-    margin-right: 20px;
-}
-
-.home-section {
-    position: relative;
-    background-image: url('../images/home.jpg');
-    background-size: cover;
-    background-position: center center;
-    height: 0;
-    padding-bottom: 56.25%; /* 16:9 ratio to view img properly in fullscreen */
-}
-
-.home-section-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: white;
-}
-
-.home-text-name {
-    font-size: 2.5em;
-    font-weight: 700;
-    transition: opacity 0.2s ease-in-out;
-    cursor: pointer;
-}
-
-.home-text-name a {
-    text-decoration: none;
-    color: white;
-}
-
-.home-text-name:hover {
-    opacity: 0.7;
-}
-
-.home-tex-job {
-    font-size: 1.5em;
-}
-
-.about-description {
-    background-color: #f5f5f5;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-}
-
-.about-section {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.about-section p {
-    line-height: 1.6;
-    color: #666;
-}
-
-.aboutsection ul {
-    list-style-type: square;
-    padding-left: 20px;
-}
-
-.about-section h3 h2{
-    color: #333;
-}
-
 .section-text-container {
     background-color: gray;
     height: 120px;
@@ -145,16 +35,16 @@ body {
     opacity: 0.7;
 }
 
-.experience-item-container, .projects-item-container {
+.item-container {
     display: flex;
     background-color: #f5f5f5;
     padding-left: 20px;
-    padding-right: 20px;
+    padding-right: 200px;
     padding-top: 30px;
     padding-bottom: 30px;
 }
 
-.experience-item-img, .projects-item-img {
+.item-img {
     max-width: 700px;
     margin-right: 20px;
     border: solid;
@@ -164,21 +54,17 @@ body {
     transition: opacity 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
-.experience-item-img:hover, .projects-item-img:hover {
+.item-img:hover {
     opacity: 0.8;
     box-shadow: 3px 3px 8px 2px lightslategrey;
     cursor: pointer;
 }
 
-.experience-item div, .projects-item div {
-    padding-right: 20px;
-}
-
-.experience-details, .projects-details {
+.details {
     flex: 1;
 }
 
-.experience-details-a, .projects-details-a {
+.details-a {
     text-decoration: none;
     font-size: 30px;
     font-weight: 500;
@@ -186,12 +72,12 @@ body {
     transition: opacity 0.2s ease-in-out;
 }
 
-.experience-details-a:hover, .projects-details-a:hover {
+.details-a:hover {
     opacity: 0.7;
     cursor: pointer;
 }
 
-.experience-details-description, .projects-details-description {
+.details-description {
     font-size: 17px;
 }
 
@@ -365,3 +251,42 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (min-width: 1000px) and (max-width: 1500px) {
+    
+    .item-container {
+        padding-right: 100px;
+    }
+    
+    .item-img {
+            max-width: 450px;
+    }
+
+    .details-a {
+        font-size: 25px;
+    }
+
+    .details-description {
+        font-size: 16px;
+    }
+
+    .education-item img {
+        width: 240px;
+    }
+    
+    .education-details h3 {
+        font-size: 1.2em;
+    }
+    
+}
+
