--- a/styles/education.css
+++ b/styles/education.css
@@ -40,3 +40,14 @@
     }
 
 }
+
+
+@media only screen and (min-width: 800px) and (max-width: 999px) {
+    .education-item img {
+        width: 200px;
+    }
+    
+    .education-details h3 {
+        font-size: 1em;
+    }
+}
