--- a/styles/general.css
+++ b/styles/general.css
@@ -108,3 +108,22 @@ footer {
         font-size: 16px;
     }
 }
+
+@media only screen and (min-width: 800px) and (max-width: 999px) {
+    
+    .item-container {
+        padding-right: 50px;
+    }
+    
+    .item-img {
+            max-width: 350px;
+    }
+
+    .details-a {
+        font-size: 20px;
+    }
+
+    .details-description {
+        font-size: 13px;
+    }
+}
