--- a/styles/general.css
+++ b/styles/general.css
@@ -127,3 +127,13 @@ footer {
         font-size: 13px;
     }
 }
+
+@media only screen and (min-width: 600px) and (max-width: 799px) {
+    .section-headline {
+        font-size: 1.2em;
+    }
+
+    .section-text-container {
+        height: 70px;
+    }
+}
