--- a/styles/skills.css
+++ b/styles/skills.css
@@ -45,3 +45,14 @@
         font-size: 0.7em;
     }
 }
+
+@media only screen and (min-width: 600px) and (max-width: 799px) {
+
+    .skill-item h3 {
+        font-size: 0.8em;
+    }
+
+    .skill-item li {
+        font-size: 0.55em;
+    }
+}
