--- a/styles/about.css
+++ b/styles/about.css
@@ -93,3 +93,25 @@
         max-width: 280px;
     }
 }
+
+@media only screen and (min-width: 250px) and (max-width: 359px) {
+    .about-section h2 {
+        font-size: 0.4em;
+    }
+
+    .about-section h3 {
+        font-size: 0.6em;
+    }
+
+    .about-section li {
+        font-size: 0.3em;
+    }
+
+    .about-section p {
+        font-size: 0.2em;
+    }
+
+    .about-section {
+        max-width: 220px;
+    }
+}
