--- a/styles/education.css
+++ b/styles/education.css
@@ -77,3 +77,17 @@
         font-size: 0.5em;
     }
 }
+
+@media only screen and (min-width: 250px) and (max-width: 359px) {
+    .education-item img {
+        width: 50px;
+    }
+    
+    .education-details h3 {
+        font-size: 0.2em;
+    }
+
+    .education-details p {
+        font-size: 0.2em;
+    }
+}
