--- a/styles/home.css
+++ b/styles/home.css
@@ -55,3 +55,13 @@
         font-size: 0.7em;
     }
 }
+
+@media only screen and (min-width: 250px) and (max-width: 359px) {
+    .home-text-name {
+        font-size: 0.8em;
+    }    
+
+    .home-text-job {
+        font-size: 0.6em;
+    }
+}
